ci(text-ui-test): compile GUI sources with JavaFX modules on *nix & Windows